# gensee-agent

./: .gitignore  .gitmodules  README.md  pyproject.toml  pyproject_docker.toml
scripts/simple_run/: config.json.example  run.py
src/app/deep_search/app/: main.py
src/app/deep_search/config/: .env.example
src/app/slack_interface/config/: config.json.example
src/deep_search/app/: config.json.example
src/gensee_agent/: settings.py
src/gensee_agent/configs/: configs.py
src/gensee_agent/controller/: controller.py  history_manager.py  llm_manager.py  mcp_hub.py  message_handler.py  prompt_manager.py  task_manager.py  tool_manager.py
src/gensee_agent/controller/dataclass/: llm_response.py  llm_use.py  tool_use.py
src/gensee_agent/exceptions/: gensee_exceptions.py
src/gensee_agent/models/: __init__.py  base.py  gemini.py  openai.py
src/gensee_agent/prompts/data/: agent_role.py  context.py  generic_template.py  objective.py  rules.py  tool_use.py
src/gensee_agent/tools/: __init__.py  base.py  gensee_scrape.py  gensee_search.py  letter_counter.py  slack_tool.py
src/gensee_agent/tools/system_tools/: mcp_tool.py  user_interaction_tool.py
src/gensee_agent/utils/: configs.py  logging.py  streaming_data.py
src/scripts/example_mcp_server/: local_time.py  weather.py
src/scripts/simple_run/: config.json.example  run.py
src/slack_interface/app/: config.json.example  main.py
