[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "defusedxml>=0.7.1",
    "docstring-parser>=0.17.0",
    "dotenv>=0.9.9",
    "eyecite>=2.7.6",
    "fastapi>=0.117.1",
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.52.0",
    "jinja2>=3.1.6",
    "json-repair>=0.52.0",
    "json5>=0.12.1",
    "markitdown[docx,pdf]>=0.1.3",
    "mcp>=1.18.0",
    "openai>=1.109.1",
    "orjson>=3.11.4",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "shortuuid>=1.0.13",
    "slack-bolt>=1.25.0",
    "slack-sdk>=3.36.0",
    "uvicorn>=0.37.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
